Add complete backend infrastructure
- API Routes:
  - /api/labs - List and create lab profiles
  - /api/labs/[id] - Get and update individual labs
  - /api/proposals - Submit and list proposals
  - /api/proposals/[id] - Accept/reject proposals
  - /api/payments/stripe - Stripe payment intents with manual capture for escrow
  - /api/payments/stripe/webhook - Stripe webhook handler
  - /api/payments/crypto - Solana/Base USDC escrow initialization
  - /api/auth/wallet - Wallet-based authentication

- Hooks:
  - Updated use-labs.ts to use API route
  - Added use-proposals.ts for proposal management

- Scripts:
  - Added seed.ts for populating test data
  - Added pnpm seed command

- Documentation:
  - Added docs/SETUP.md with full setup instructions
  - Added .env.example (template)

- Dependencies:
  - Added stripe package
  - Added tsx for running TypeScript scripts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "npx tsx scripts/seed.ts",
+    "db:migrate": "echo 'Run lib/db/migrations/001_initial_schema.sql in Supabase SQL Editor'"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -62,7 +64,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "xstate": "^5.25.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "stripe": "^17.5.0"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -70,6 +73,7 @@
     "@types/react-dom": "^19",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.7.0",
     "typescript": "^5"
   }
 }
