--- a/package.json
+++ b/package.json
@@ -65,7 +65,10 @@
     "vaul": "^0.9.6",
     "xstate": "^5.25.1",
     "zod": "^3.24.1",
-    "stripe": "^17.5.0"
+    "stripe": "^17.5.0",
+    "@coinbase/coinbase-sdk": "^0.15.0",
+    "@solana/web3.js": "^1.98.0",
+    "@solana/spl-token": "^0.4.12"
   },
   "devDependencies": {
     "@types/node": "^22",
