--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:migrate": "echo 'Run lib/db/migrations/001_initial_schema.sql in Supabase SQL Editor'"
   },
   "dependencies": {
+    "@coinbase/coinbase-sdk": "^0.15.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -39,6 +40,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@solana/spl-token": "^0.4.12",
+    "@solana/web3.js": "^1.98.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.1",
     "@tanstack/react-table": "latest",
@@ -54,21 +57,18 @@
     "next": "16.1.4",
     "next-themes": "^0.4.4",
     "react": "^19",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "9.13.0",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
+    "vaul": "^1.1.2",
     "xstate": "^5.25.1",
-    "zod": "^3.24.1",
-    "stripe": "^17.5.0",
-    "@coinbase/coinbase-sdk": "^0.15.0",
-    "@solana/web3.js": "^1.98.0",
-    "@solana/spl-token": "^0.4.12"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -77,6 +77,6 @@
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.7.0",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
