--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "db:migrate": "echo 'Run lib/db/migrations/001_initial_schema.sql in Supabase SQL Editor'"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.30",
+    "@coinbase/agentkit": "^0.10.4",
+    "@coinbase/agentkit-vercel-ai-sdk": "^0.1.0",
     "@coinbase/coinbase-sdk": "^0.15.0",
     "@hookform/resolvers": "^3.9.1",
+    "@privy-io/react-auth": "^3.14.1",
+    "@privy-io/server-auth": "^1.32.5",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -47,6 +52,7 @@
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-table": "latest",
     "@xstate/react": "^6.0.0",
+    "ai": "^4.3.19",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -71,7 +77,7 @@
     "viem": "2.x",
     "wagmi": "^3.4.2",
     "xstate": "^5.25.1",
-    "zod": "^3.24.1"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^22",
